--- a/frontend/src/components/TotalContacts/Functionalities/DeleteContactComfirmation.css
+++ b/frontend/src/components/TotalContacts/Functionalities/DeleteContactComfirmation.css
@@ -5,12 +5,12 @@
     position: relative;
     height: 100vh;
   }
-  .box-2 {
+  .box-3 {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    width: 200px;
+    width: 300px;
     height: 200px;
     border-radius: 10px;
     position: absolute;
@@ -20,18 +20,18 @@
     background-color: #FFFFFF;
   }
   
-  .text-head-2 {
+  .text-head-3 {
     font-size: 18px;
     font-weight: 500;
     margin-top: 1em;
   }
-  .drop-2 {
+  .drop-3 {
     font-size: 14px;
-    font-weight: 400;
+    font-weight: 500;
     text-decoration-color: #2da5fc;
     color: #2da5fc;
   }
-  .btn {
+  .cancel{
     margin-bottom: 1em;
   }
   
