--- a/frontend/src/styles/login.css
+++ b/frontend/src/styles/login.css
@@ -4,16 +4,71 @@ body{
     margin: 0px;
     padding: 0;
 }
+.passwordbox{
+    border: 1px solid grey;
+    
+    /* width:300px ; */
+    text-align: center;
+    height: 40px;
+    width: 310px;
+    margin-left: 100px;
+    margin-top: 8px;
+}
+.dotsImg1{
+    position: absolute;
+    /* right: 1; */
+    /* top: 1; */
+
+    width: "20%";
+    height: "30%";
+    margin: 10px;
+    margin-left: 650px;
+    margin-top: -120px;
+    opacity: 0.8;
+    background: #d6ecf3;
+}
+.ecllipseimg1{
+    position: absolute;
+    left: 0%;
+    top:0%;
+    width: 15%;
+    opacity: 0.6;
+}
+.ecllipseimg2{
+    position: absolute;
+    bottom: 0%;
+    right: 0%;
+    width: 15%;
+    opacity: 0.6;
+}
+.eye{
+    margin-left: 80px;
+    color: gray;
+}
+.dotsImg2{
+    position: absolute;
+    /* right: 1; */
+    /* top: 1; */
+
+    width: "20%";
+    height: "30%";
+    margin: 10px;
+    margin-left: -250px;
+    margin-top: 250px;
+    opacity: 0.8;
+    background: #d6ecf3;
+}
 .loginBox{
-    background:#d6ecf3;
-    height: 80vh;
+    background:#f1f9fc;
+    height: 90vh;
     position: fixed;
     display: flex;
+    position: relative;
     /* margin: 100px; */
     position: inherit;
     margin-left: 100px;
     margin-right: 100px;
-    margin-top: 50px;
+    margin-top: 30px;
     border-radius: 22px;
     box-shadow: 0px 4px 22px #B2DFFF;;
     
@@ -54,34 +109,35 @@ text-align: center;
 }
 .userpassword{
     margin-top: 10px;
-    margin-left: 100px;
+    background-color: #f1f9fc;
+    /*margin-left: 100px;
     width:300px ;
     text-align: center;
-    height: 40px;
+    height: 40px; */
+    border: none;
 }
+
 .usermail,.userpassword:focus{
     outline: none;
 }
+
 .signin{
-    margin-left: 280px;
-    margin-top: 10px ;
-    width: 300px;
+    margin-left: 100px;
+    margin-top: 50px ;
+    width: 310px;
     height: 40px;
     border: none;
     background-color:#7D8CC4;
 }
 .signup{
     margin-left: 100px;
-    /* margin-top: 5px ; */
+    margin-top: 5px ;
     width: 300px;
     height: 40px;
-    background-color:#d6ecf3 ;
+    background-color:#f1f9fc ;
     border: none;
 }
-.lastText{
-    margin-top: 520px;
-    margin-left: -370px;
-}
+
 .request{
     color: #352D66;
     font-family: 'Open Sans';
