--- a/frontend/src/styles/signup.css
+++ b/frontend/src/styles/signup.css
@@ -4,11 +4,20 @@ body{
     padding: 0;
 }
 .signupBox{
-    
-background-color:#CEF3FF;
-height: 100vh;
+    background:#f1f9fc;
+    height: 90vh;
+    position: fixed;
     display: flex;
-    flex-direction: column;
+    position: relative;
+    /* margin: 100px; */
+    position: inherit;
+    margin-left: 100px;
+    margin-right: 110px;
+    margin-top: 31px;
+    /* margin-bottom: -30px; */
+    border-radius: 22px;
+    box-shadow: 0px 4px 22px #B2DFFF;
+    
 }
 .signUp{
     /* align-self: center; */
@@ -19,7 +28,16 @@ margin-top: 70px;
 /* background-color: #FFFFFF; */
 border-radius: 10px;
 /* border: 2px solid green; */
-
+}
+.passwordBox{
+    border: 1px solid grey;
+    background: white;
+    /* width:300px ; */
+    text-align: center;
+    height: 40px;
+    width: 310px;
+    margin-left: 50px;
+    margin-top: 20px;
 }
 .text1{
     font-family: 'Open Sans';
@@ -29,43 +47,82 @@ line-height: 22px;
 letter-spacing: 0.25px;
 text-align: center;
 margin-top: 20px;
+margin-left: -70px;
 
 }
+.DotsImg1{
+    position: absolute;
+    width: "20%";
+    height: "30%";
+    margin-left: 525px;
+    margin-top: -30px;
+    opacity: 0.8;
+}
+.Ecllipseimg1{
+    position: absolute;
+    left: 0%;
+    top:0%;
+    width: 15%;
+    opacity: 0.6;
+}
+.Ecllipseimg2{
+    position: absolute;
+    bottom: 0%;
+    right: 0%;
+    width: 15%;
+    opacity: 0.6;
+}
+.DotsImg2{
+    position: absolute;
+    top: 1;
+    left: 1;
+    /* right: 1; */
+    margin-top: 330px;
+    margin-left: -330px;
+    width: "20%";
+    height: "30%";
+    /* margin: 10px; */
+    opacity: 0.8;
+}
 .Logo{
-    margin-top: 20px;
+    margin-top: -50px;
     text-align: center;
     font-family: 'Open Sans';
     color:#7D8CC4;
+    margin-left: -80px;
 }
 .mail{
     margin-top: 40px;
-    margin-left: 100px;
+    margin-left: 50px;
     width:300px ;
     text-align: center;
     height: 40px;
-    color: #E2E2E2;
+    /* color: #E2E2E2; */
 }
 .password{
-    margin-top: 30px;
-    margin-left: 100px;
+    /* margin-top: 30px;
+    margin-left: 50px;
     width:300px ;
-    text-align: center;
-    height: 40px;
+    text-align: center; */
+    height: 30px;
+    border: none;
 }
 .cpassword{
-    margin-top: 30px;
-    margin-left: 100px;
+    /* margin-top: 30px;
+    margin-left: 50px;
     width:300px ;
     text-align: center;
-    height: 40px;
+    height: 30px; */
+    margin-top: 8px;
+    border: none;
 }
 .mail,.password,.cpassword:focus{
     outline: none;
 }
 .submit{
-    margin-left: 100px;
+    margin-left: 50px;
     margin-top: 40px ;
-    width: 300px;
+    width: 310px;
     height: 40px;
     border: none;
     color: #FFFFFF;
